# HMcode

Hardware/: BUILD.gn  main.c  tcp_client.c  tcp_client.h  wifi_utils.c  wifi_utils.h
main/java/com/chinasofti/prjboothmdemo/: PrjboothmdemoApplication.java
main/java/com/chinasofti/prjboothmdemo/controller/: EvntableController.java
main/java/com/chinasofti/prjboothmdemo/dao/: EvntableDao.java
main/java/com/chinasofti/prjboothmdemo/entity/: Evntable.java
main/java/com/chinasofti/prjboothmdemo/service/: EvntableService.java
main/java/com/chinasofti/prjboothmdemo/service/impl/: EvntableServiceImpl.java
main/java/com/dao/: EnvDao.java
main/java/com/db/: DBConnection.java  DBHelper.java  DataPoint.java
main/java/com/server/: MainServer.java
main/resources/: application.properties
main/resources/mapper/: EvntableDao.xml
main/resources/static/: click.js  comment.js  index.html  test.html
